# Learning-Projects

./: .gitignore  README.md
Notes/: Project Setup(venv and dependencies).txt  compile a ui file into py file.txt  convert py to exe.txt  exemplo de mvc num projeto teu.txt  mvc_explicacao.md  principio_SOLID.md  principios_grasp.md  python tools.txt  qt designer tips.txt  virtualenvironment(venv).txt
PingPongGame/: Improve.txt  README.md  doc.md  ping_pong.py
SportsWebApp/: DOC.md  README.md  WARNING.txt  application.py  credentials.py  fun_fact_generator.py  mkdocs.yml  na parter guardar as passwords.2do  pyproject.toml  query.sql  requirements.txt  scheme.drawio
SportsWebApp/site/: 404.html  index.html
SportsWebApp/static/css/: main.css
SportsWebApp/templates/: about.html  chat.html  home.html  members_list.html  register.html  register_done.html  register_failed.html  search_result.html
TerminalApp/: DOC.md  README.md  WARNING.txt  estrutura_app.txt  estrutura_mvc.txt  requirements.txt  scheme.drawio  scratch.py
TerminalApp/app/: README.md  main.py
TodoApp/: README.md  estrutura_app.txt  estrutura_mvc.txt  scheme.drawio
TodoApp/app/: DOC.md  README.md  main.py  requirements.txt
WeatherApp/: .env  README.md  credentials.txt  estrutura mvc.txt  estrutura_app.txt  estrutura_mvc.txt
WeatherApp/app/: icons_dict.txt  main.py
WebImages/: app.py  comunicacao_web_exemplos.md  database.db  processing.py  random.session.sql
WebImages/html/: about.html  gallery.html  image.html  intro.html  process.html  register.html  upload.html
WebImages/js/: image.js  (+4 more)
(+41 files in other folders)
