[tool.poetry]
name = "sportswebapp"
version = "0.1.0"
description = "This is a webapp for registering at some sport"
authors = ["Your Name <jpereira212006@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
flask-socketio = "^5.3.7"
flask-cors = "^5.0.0"
openai = "^1.45.0"
axios = "^0.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
